--- a/app/src/main/res/layout/fragment_workout_details.xml
+++ b/app/src/main/res/layout/fragment_workout_details.xml
@@ -1,68 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.MyWorkoutsFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/tb_workoutToolbar"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Theme.GymDe.DefaultToolbar"
+        android:layout_height="match_parent"
+        tools:context=".ui.main.MyWorkoutsFragment">
 
-        app:menu="@menu/workout_menu"
-        app:titleTextColor="@color/white"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/tb_workoutToolbar"
+            style="@style/Theme.GymDe.DefaultToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/workout_menu"
 
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/pg_progressBarWorkoutDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            app:titleTextColor="@color/white" />
 
-        android:indeterminate="true"
-        android:visibility="invisible"
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/pg_progressBarWorkoutDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toBottomOf="@id/tb_workoutToolbar"
-        />
+            android:indeterminate="true"
+            android:visibility="invisible"
 
-    <TextView
-        android:id="@+id/tv_exerciseTitle"
-        style="@style/TextAppearance.Material3.TitleLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tb_workoutToolbar" />
 
-        android:layout_margin="@dimen/small_margin"
-        android:text="@string/exercises"
-        app:layout_constraintTop_toBottomOf="@id/pg_progressBarWorkoutDetails" />
+        <TextView
+            android:id="@+id/tv_exerciseTitle"
+            style="@style/TextAppearance.Material3.TitleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_exercise"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+            android:layout_margin="@dimen/small_margin"
+            android:text="@string/exercises"
+            app:layout_constraintTop_toBottomOf="@id/pg_progressBarWorkoutDetails" />
 
-        android:layout_margin="@dimen/small_margin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_exercise"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/extended_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            android:layout_margin="@dimen/small_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle" />
 
-        android:layout_margin="@dimen/small_margin"
-        android:contentDescription="@string/new_workout_btn_description"
-        android:elevation="8dp"
-        android:text="@string/new_exercise"
-        app:backgroundTint="@color/orange"
-        android:src="@drawable/ic_plus"
-        app:tint="@color/white"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_createExercise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_margin="@dimen/small_margin"
+            android:contentDescription="@string/new_workout_btn_description"
+            android:elevation="8dp"
+            android:src="@drawable/ic_plus"
+            android:text="@string/new_exercise"
+            app:backgroundTint="@color/orange"
+            app:layout_constraintBottom_toBottomOf="parent"
 
 
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/white" />
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
