--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:padding="@dimen/medium_padding"
+    >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_exercise"
@@ -43,6 +46,18 @@
         app:layout_constraintStart_toEndOf="@id/iv_exercise"
         app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle"
         app:layout_constraintStart_toStartOf="@id/tv_exerciseTitle"/>
+
+    <TextView
+        android:id="@+id/tv_quantitySeries"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        tools:text="@string/dayOfWeek"
+        style="@style/TextAppearance.Material3.BodySmall"
+
+        app:layout_constraintStart_toEndOf="@id/iv_exercise"
+        app:layout_constraintTop_toBottomOf="@id/tv_exerciseDescription"
+        app:layout_constraintStart_toStartOf="@id/tv_exerciseDescription"/>
 
 
     <com.google.android.material.button.MaterialButton
