--- a/app/src/main/res/layout/fragment_new_exercise.xml
+++ b/app/src/main/res/layout/fragment_new_exercise.xml
@@ -69,8 +69,13 @@
 
             <TextView
                 style="@style/TextAppearance.Material3.TitleLarge"
+
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:layout_margin="@dimen/medium_margin"
                 android:text="@string/add_photo" />
 
             <ImageView
@@ -89,6 +94,8 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <com.google.android.material.button.MaterialButton
