--- a/app/src/main/res/layout/my_workout_item.xml
+++ b/app/src/main/res/layout/my_workout_item.xml
@@ -11,27 +11,48 @@
 
     <TextView
         android:id="@+id/tv_workoutTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="@dimen/medium_margin"
 
         tools:text="@string/title_workout"
+        android:maxLines="1"
+        android:ellipsize="end"
         style="@style/TextAppearance.Material3.TitleMedium"
 
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iconButton"/>
 
     <TextView
         android:id="@+id/tv_workoutDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        tools:text="@string/workout_day"
+        tools:text="@string/description"
+        android:maxLines="1"
+        android:ellipsize="end"
         style="@style/TextAppearance.Material3.BodySmall"
 
+        app:layout_constraintEnd_toStartOf="@id/iconButton"
         app:layout_constraintTop_toBottomOf="@id/tv_workoutTitle"
         app:layout_constraintStart_toStartOf="@id/tv_workoutTitle"/>
+
+    <TextView
+        android:id="@+id/tv_dateOfCreate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:text="@string/create_day"
+        android:textColor="@color/orange"
+        android:maxLines="1"
+        android:ellipsize="end"
+        style="@style/TextAppearance.Material3.BodySmall"
+
+        app:layout_constraintEnd_toStartOf="@id/iconButton"
+        app:layout_constraintTop_toBottomOf="@id/tv_workoutDescription"
+        app:layout_constraintStart_toStartOf="@id/tv_workoutDescription"/>
 
 
     <com.google.android.material.button.MaterialButton
