--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-
     <style name="Theme.GymDe.DefaultToolbar" parent="Widget.Material3.Toolbar">
         <item name="materialThemeOverlay">@style/ThemeOverlay.Material3.Toolbar.Surface</item>
         <item name="titleTextAppearance">@style/TextAppearance.Material3.TitleLarge</item>
         <item name="navigationIcon">@drawable/ic_arrow</item>
         <item name="android:background">?attr/colorPrimary</item>
     </style>
+
+
+    <style name="Theme.AppSplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/dark_blue</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.GymDe</item>
+    </style>
+
 
 </resources>
