ref: refactoring and cleanup of drawables

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -45,6 +45,8 @@
             app:destination="@id/newExerciseFragment" />
         <action
             android:id="@+id/action_workoutDetailsFragment_to_myWorkoutsFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"
             app:destination="@id/myWorkoutsFragment" />
     </fragment>
     <fragment
